# safe-kit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
api/adapter/: index.html
api/factory/: index.html
api/safe/: index.html
api/types/: index.html
docs/: index.md  roadmap.md  user_guide.md
docs/api/: adapter.md  factory.md  safe.md  types.md
examples/: basic_usage.py
roadmap/: index.html
safe_kit/: __init__.py  abis.py  adapter.py  contract_types.py  errors.py  factory.py  multisend.py  safe.py  service.py  types.py
safe_kit/managers/: __init__.py  guard_manager.py  module_manager.py  owner_manager.py  token_manager.py
scripts/: generate_types.py  setup_ci_chain.py
scripts/bytecodes/: proxy_factory.txt
search/: search_index.json
tests/: test_e2e.py  test_factory.py  test_messages.py  test_multisend.py  test_safe.py  test_service.py
user_guide/: index.html
