[tool.poetry]
name = "safe-kit"
version = "0.1.0"
description = "Python implementation of the Safe Protocol Kit"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "safe_kit"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.0.0"
eth-account = "^0.8.0"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
types-requests = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.isort]
known-first-party = ["safe_kit"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
