[tool.poetry]
name = "safe-kit"
version = "0.0.11"
description = "Python implementation of the Safe Protocol Kit"
authors = ["smallyu <smallyu@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/smallyunet/safe-kit"
homepage = "https://github.com/smallyunet/safe-kit"
documentation = "https://github.com/smallyunet/safe-kit"
keywords = ["ethereum", "safe", "gnosis-safe", "web3", "sdk", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "safe_kit"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.0.0"
eth-typing = "<5.0.0"
eth-account = "^0.11.0"
pydantic = "^2.0.0"
setuptools = "*"
requests = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
requests-mock = "^1.11.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
types-requests = "^2.0.0"
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.isort]
known-first-party = ["safe_kit"]

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end tests (requires local node)",
]
pythonpath = "."

[tool.coverage.run]
source = ["safe_kit"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 70

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "examples.*"
disallow_untyped_defs = false
